# PlayerPulse

./: .env.example  .gitignore  Makefile  README.md  WORKFLOW.md  pyproject.toml  render.yaml
api/: config.py  main.py  startup.py
api/agents/: churn_analyst.py  nlp_agent.py  schema_agent.py
api/middleware/: auth.py
api/models/: studio.py
api/registry/: game_registry.py  model_registry.py
api/routers/: chat.py  demo.py  ingest.py  players.py  studios.py
api/services/: data_service.py  demo_service.py  ingest_service.py  mapping_service.py  model_service.py  network_sim_service.py  shap_service.py  studio_service.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/api/: chat.js  client.js  demo.js  players.js  studios.js
frontend/src/components/AnalyticsPanel/: AnalyticsPanel.css  AnalyticsPanel.jsx
frontend/src/components/ChatPanel/: ChatPanel.css  ChatPanel.jsx
frontend/src/components/DemoBanner/: DemoBanner.css  DemoBanner.jsx
frontend/src/components/FleetOverview/: FleetOverview.css  FleetOverview.jsx
frontend/src/components/PlayerSearch/: PlayerSearch.css  PlayerSearch.jsx
frontend/src/components/ShapChart/: ShapChart.css  ShapChart.jsx
frontend/src/hooks/: useChat.js  usePlayer.js
frontend/src/pages/: Demo.css  Demo.jsx  Home.css  Home.jsx
models/: catboost.joblib  ensemble.joblib  lightgbm.joblib  logistic_regression.joblib  scaler.joblib  shap_values.joblib  xgboost.joblib
models/demo/: catboost.joblib  ensemble.joblib  lightgbm.joblib  logistic_regression.joblib  scaler.joblib  shap_values.joblib  xgboost.joblib
notebooks/: 03_model_evaluation.ipynb
src/game_churn/features/: schema.py
src/playerpulse/: cli.py
src/playerpulse/collectors/: base.py  opendota.py  rawg.py  riot.py  run_all.py  steam.py
src/playerpulse/features/: build.py  engineer.py  network_features.py  schema.py  standardize.py  text_features.py
src/playerpulse/models/: synthetic.py  train.py
src/playerpulse/utils/: config.py
tests/: test_collectors.py  test_features.py  test_models.py  test_placeholder.py
