[project]
name = "player-pulse"
version = "0.1.0"
description = "AI-powered player churn prediction platform for game studios"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "PlayerPulse", email = "hello@playerpulse.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.4",
    "pandera[polars]>=0.20",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "catboost>=1.2",
    "mlflow>=2.16",
    "shap>=0.46",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-groq>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-mistralai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "tenacity>=9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://playerpulse.io"
Repository = "https://github.com/shreeyut/PlayerPulse"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "ipykernel>=6.29",
]
nlp = [
    "transformers>=4.40",
    "torch>=2.0",
    "openai>=1.0",
    "matplotlib>=3.9",
    "wordcloud>=1.9",
]
network = [
    "sionna>=0.18",
    "tensorflow>=2.14; sys_platform != 'darwin'",
    "tensorflow-macos>=2.14; sys_platform == 'darwin'",
    "tensorflow-metal>=1.1; sys_platform == 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playerpulse"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["playerpulse"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "shap.*",
    "mlflow.*",
    "pandera.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/playerpulse --cov-report=term-missing"
asyncio_mode = "auto"
